# Sentient-Inbox-Backend

./: .claudeignore  .clinerules  .gitignore  __init__.py  bcrypt-fix.py  bcrypt_fix.py  credentials_loader.py  email_responses.json  emails.txt  groq_metrics.json  load-credentials-patch.py  main.py  meeting_analyzer.py  meeting_mails.json  oauth-diagnostic.py  pre_startup.py  pyproject.toml  repomix-output.txt  requirements.txt  run_api.py  run_storage_tests.py  setup.ps1  setup.py  setup_and_run_tests.ps1  setup_directories.py  startup_script.py  test-requirements.txt  test_coverage_plan.md  test_runner.py  test_runner_with_coverage.py  token-key-generator.py  unicode_safe_logging.py  universal_test_runner.py  updated_pre_startup.py
.claudesync/: config.local.json
api/: README.md  __init__.py  config.py  main.py
data/: email_responses.json
docs/: analysis-pipeline.md  api_documentation.md  api_integration_overview.md  assistant-instructions.md  classification-categories.md  email-processing-rules.md  error-handling.md  existing-infrastructure.md  frontend_integration_guide.md  future-enhancements.md  openai.md  project_documentation.md  response-management.md  structured_outputs.md  system-instructions.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
processors/: __init__.py  content_processor.py
src/: __init__.py
tests/: component_unit_tests.py  deepseek-analyzer-tests.py  email-agent-tests.py  email_pipeline_integration_test.py  email_processor_integration_tests.py  test_api_endpoints.py  (+8 more)
(+58 files in other folders)
