[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentient-inbox"
version = "1.0.0"
description = "Sentient Inbox Backend for intelligent email processing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
authors = [
    {name = "Ivaylo Cvetkov", email = "i.b.cvetkov@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.2",
    "sqlalchemy>=2.0.0",
    "google-auth-oauthlib>=0.8.0",
    "google-api-python-client>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "protobuf>=4.0.0",
    "groq>=0.3.0",
    "cryptography>=41.0.0",
    "passlib>=1.7.4",
    "bcrypt==4.0.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "aiohttp>=3.9.0",
    "urllib3>=2.0.0",
    "pytest>=7.0.0",
    "python-jose>=3.3.0",
    "starlette>=0.27.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0"
]

[tool.setuptools.packages.find]
include = ["src*", "api*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]